-bug#0002386: cli/upgrade_database.php is missing the last two releases
-bug. fix COMMENT handling, even in case COMMENT is empty, with or without HR and with variable substitution
-bug: fix issues when SNMP data holds a "="; "explode" must be treated accordingly
-bug: fix filter highlighting on data sources for the data template field

0.8.8b
-bug: Fixed issue with custom data source information being lost when saved from edit
-bug: Repopulate the poller cache on new installations
-bug: Fix issue with poller not escaping the script query path correctly
-bug: Allow snmpv3 priv proto none
-bug: Fix issue where host activate may flush the entire poller item cache
-security: SQL injection and shell escaping issues 

0.8.8a
-bug#0002207: cannot export graph templates
-bug#0002208: Graphs with CDEFs fail to generate
-bug#0002209: External auth does not work behind a reverse proxy 
-bug#0002211: creating an index USING BTREE fails ony MySQL < 5.0.60
-bug#0002213: CLI upgrade script is missing 0.8.7i as a target
-bug#0002214: SQL error during non-PIA upgrade to 088 when giving a default for a text field in plugin_realms
-bug#0002216: use of define_syslog_variables() gone in PHP 5.4 
-bug#0002217: url_path should default to /cacti/
-bug#0002221: Missing plugin directory causes endless loop in plugins.php
-bug#0002222: tail_logfile hangs when cacti.log not readable, filling apache log with fgets warnings

0.8.8
-bug#0002056: un-initialized datetime used for host status (was: Zero length string != NULL) 
-bug#0002081: In Graph Management, search display graph title breaks when using pattern symbol "/"
-bug#0002132: need to include pa.sql with the 0.8.7i and future releases
-bug#0002134: rebuild_poller_cache.php --host-id deletes table poller_item completely
-bug#0002141: cacti.sql missing BTREE PRIMARY KEY for poller_output 
-bug#0002146: Utilities -> View Log File -> refresh does not work