@@ -774,7 +774,7 @@ $fields_host_edit = array(
 	"snmp_password" => array(
 		"method" => "textbox_password",
 		"friendly_name" => "SNMP Password (v3)",
-		"description" => "SNMP v3 password for this device.",
+		"description" => "SNMP v3 authentication pass phrase for this device.",
 		"value" => "|arg1:snmp_password|",
 		"default" => read_config_option("snmp_password"),
 		"max_length" => "50",
@@ -783,7 +783,7 @@ $fields_host_edit = array(
 	"snmp_auth_protocol" => array(
 		"method" => "drop_array",
 		"friendly_name" => "SNMP Auth Protocol (v3)",
-		"description" => "Choose the SNMPv3 Authorization Protocol.",
+		"description" => "Choose the SNMPv3 authentication protocol.",
 		"value" => "|arg1:snmp_auth_protocol|",
 		"default" => read_config_option("snmp_auth_protocol"),
 		"array" => $snmp_auth_protocols,
@@ -791,7 +791,7 @@ $fields_host_edit = array(
 	"snmp_priv_passphrase" => array(
 		"method" => "textbox",
 		"friendly_name" => "SNMP Privacy Passphrase (v3)",
-		"description" => "Choose the SNMPv3 Privacy Passphrase.",
+		"description" => "Choose the SNMPv3 privacy passphrase.",
 		"value" => "|arg1:snmp_priv_passphrase|",
 		"default" => read_config_option("snmp_priv_passphrase"),
 		"max_length" => "200",
@@ -799,8 +799,8 @@ $fields_host_edit = array(
 		),
 	"snmp_priv_protocol" => array(
 		"method" => "drop_array",
-		"friendly_name" => "SNMP Privacy Protocol (v3)",
-		"description" => "Choose the SNMPv3 Privacy Protocol.",
+		"friendly_name" => "SNMP privacy protocol (v3)",
+		"description" => "Choose the SNMPv3 privacy protocol.",
 		"value" => "|arg1:snmp_priv_protocol|",
 		"default" => read_config_option("snmp_priv_protocol"),
 		"array" => $snmp_priv_protocols,
@@ -808,7 +808,7 @@ $fields_host_edit = array(
 	"snmp_context" => array(
 		"method" => "textbox",
 		"friendly_name" => "SNMP Context",
-		"description" => "Enter the SNMP Context to use for this device.",
+		"description" => "Enter the SNMP context to use for this device.",
 		"value" => "|arg1:snmp_context|",
 		"default" => "",
 		"max_length" => "64",
